--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "chatbot-proxy",
   "version": "1.0.0",
   "type": "module",
-  "dependencies": {}
+  "scripts": {
+    "dev": "next dev"
+  },
+  "dependencies": {
+    "next": "^14.0.0"
+  }
 }
